--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -22,38 +22,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="125" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="m8y-pe-SUn">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="131" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="m8y-pe-SUn">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="businessCell" rowHeight="125" id="6u1-cd-qfo" customClass="BusinessCell" customModule="Yelp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="125"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="businessCell" rowHeight="131" id="6u1-cd-qfo" customClass="BusinessCell" customModule="Yelp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="131"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6u1-cd-qfo" id="0WY-UE-aQh">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="124"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="249" verticalCompressionResistancePriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="lWU-fR-4vX">
-                                                    <rect key="frame" x="120" y="38" width="84" height="16"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="lWU-fR-4vX">
+                                                    <rect key="frame" x="120" y="47.5" width="84" height="16"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="16" id="CCj-qp-25v"/>
                                                         <constraint firstAttribute="width" constant="84" id="n4B-Lv-eSD"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" verticalCompressionResistancePriority="252" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJW-47-UbI">
-                                                    <rect key="frame" x="120" y="64" width="47" height="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJW-47-UbI">
+                                                    <rect key="frame" x="120" y="73.5" width="47" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="253" verticalCompressionResistancePriority="253" text="Cuisine" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64C-Vd-XGs">
-                                                    <rect key="frame" x="120" y="96" width="243" height="15"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHw-V1-cbM">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="249" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHw-V1-cbM">
                                                     <rect key="frame" x="351" y="36" width="16" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="15" id="DUZ-QT-Sxu"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -65,22 +62,28 @@
                                                         <constraint firstAttribute="height" constant="100" id="xG2-Xy-vTV"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="250" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2qX-34-IBH">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="250" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2qX-34-IBH">
                                                     <rect key="frame" x="317" y="11" width="50" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="249" text="# Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uv8-28-nSt">
-                                                    <rect key="frame" x="212" y="38" width="58" height="15"/>
+                                                    <rect key="frame" x="212" y="47.5" width="58" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rBN-yf-die">
-                                                    <rect key="frame" x="120" y="11" width="189" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="249" verticalCompressionResistancePriority="1000" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rBN-yf-die">
+                                                    <rect key="frame" x="120" y="11" width="189" height="30.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Cuisine" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64C-Vd-XGs">
+                                                    <rect key="frame" x="120" y="105.5" width="243" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -89,14 +92,15 @@
                                                 <constraint firstItem="uv8-28-nSt" firstAttribute="leading" secondItem="lWU-fR-4vX" secondAttribute="trailing" constant="8" id="0fd-cP-83G"/>
                                                 <constraint firstItem="64C-Vd-XGs" firstAttribute="leading" secondItem="lWU-fR-4vX" secondAttribute="leading" id="1uz-vY-wRs"/>
                                                 <constraint firstItem="J6e-2G-bah" firstAttribute="leading" secondItem="0WY-UE-aQh" secondAttribute="leading" constant="8" id="52y-Z3-Akb"/>
+                                                <constraint firstItem="64C-Vd-XGs" firstAttribute="top" secondItem="AHw-V1-cbM" secondAttribute="bottom" constant="54.5" id="AlT-lp-E3G"/>
                                                 <constraint firstItem="lWU-fR-4vX" firstAttribute="leading" secondItem="J6e-2G-bah" secondAttribute="trailing" constant="12" id="HyS-Dv-xqE"/>
                                                 <constraint firstAttribute="trailing" secondItem="AHw-V1-cbM" secondAttribute="trailing" constant="8" id="UZk-uO-342"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="J6e-2G-bah" secondAttribute="bottom" constant="8" id="VVi-gx-P8t"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="J6e-2G-bah" secondAttribute="bottom" constant="18" id="VVi-gx-P8t"/>
                                                 <constraint firstItem="mJW-47-UbI" firstAttribute="leading" secondItem="rBN-yf-die" secondAttribute="leading" id="VWR-iY-KHb"/>
                                                 <constraint firstItem="lWU-fR-4vX" firstAttribute="leading" secondItem="rBN-yf-die" secondAttribute="leading" id="WuY-w3-ISf"/>
+                                                <constraint firstAttribute="bottom" secondItem="64C-Vd-XGs" secondAttribute="bottom" constant="10" id="a7i-T7-A6r"/>
                                                 <constraint firstItem="J6e-2G-bah" firstAttribute="top" secondItem="0WY-UE-aQh" secondAttribute="top" constant="11" id="cx6-EC-rBj"/>
                                                 <constraint firstItem="2qX-34-IBH" firstAttribute="top" secondItem="J6e-2G-bah" secondAttribute="top" id="ejb-pD-KVh"/>
-                                                <constraint firstItem="64C-Vd-XGs" firstAttribute="bottom" secondItem="J6e-2G-bah" secondAttribute="bottom" id="eny-Kk-LS0"/>
                                                 <constraint firstAttribute="trailing" secondItem="2qX-34-IBH" secondAttribute="trailing" constant="8" id="fBJ-GP-oKa"/>
                                                 <constraint firstAttribute="trailing" secondItem="64C-Vd-XGs" secondAttribute="trailing" constant="12" id="gQh-QU-ct7"/>
                                                 <constraint firstItem="uv8-28-nSt" firstAttribute="top" secondItem="lWU-fR-4vX" secondAttribute="top" id="hW7-bv-oBs"/>
@@ -290,7 +294,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YJd-l6-bLE" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="IYO-9C-uFx">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IYO-9C-uFx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="1" green="0.97686620969586557" blue="0.99991692170098456" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
