Fixed auto layout in detailed view

--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -30,7 +29,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="131"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6u1-cd-qfo" id="0WY-UE-aQh">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="130.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="lWU-fR-4vX">
@@ -114,6 +113,7 @@
                                                 <constraint firstItem="2qX-34-IBH" firstAttribute="top" secondItem="0WY-UE-aQh" secondAttribute="top" constant="11" id="v4J-by-0OS"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <outlet property="addressLabel" destination="mJW-47-UbI" id="dt6-mS-ePS"/>
                                             <outlet property="cuisineLabel" destination="64C-Vd-XGs" id="wtT-eR-fHR"/>
@@ -190,7 +190,7 @@
                                     <constraint firstAttribute="width" constant="259" id="VKH-Rn-Ry9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Txb-OJ-EG8">
@@ -213,61 +213,60 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="751" text="# Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cMh-yf-g3B">
                                 <rect key="frame" x="164" y="138" width="70" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" horizontalCompressionResistancePriority="753" verticalCompressionResistancePriority="753" text="Address" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogc-DH-7hf">
-                                <rect key="frame" x="164" y="202" width="61" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" text="Address" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogc-DH-7hf">
+                                <rect key="frame" x="164" y="201" width="84" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AYz-Nx-tCy">
-                                <rect key="frame" x="340" y="141" width="19" height="18"/>
+                                <rect key="frame" x="344" y="141" width="19" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="254" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="753" text="Cuisine" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MCk-y3-ZND">
                                 <rect key="frame" x="164" y="264" width="51" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pdM-E8-oE3">
-                                <rect key="frame" x="299" y="104" width="60" height="18"/>
+                                <rect key="frame" x="307" y="104" width="60" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.63669892131979688" green="0.0" blue="0.08293314951706765" alpha="0.93634952910958902" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="uYc-wq-Mim" firstAttribute="leading" secondItem="ogc-DH-7hf" secondAttribute="leading" id="6Xl-1g-cWc"/>
                             <constraint firstItem="uYc-wq-Mim" firstAttribute="leading" secondItem="Txb-OJ-EG8" secondAttribute="trailing" constant="8" symbolic="YES" id="B3b-h8-OlQ"/>
                             <constraint firstItem="uYc-wq-Mim" firstAttribute="leading" secondItem="ieL-K9-V5A" secondAttribute="leading" constant="164" id="C1r-gW-tfm"/>
                             <constraint firstItem="2pU-yr-9DV" firstAttribute="top" secondItem="jzn-Vj-LlO" secondAttribute="bottom" id="CRH-a4-Xsi"/>
-                            <constraint firstItem="MCk-y3-ZND" firstAttribute="centerX" secondItem="ogc-DH-7hf" secondAttribute="centerX" constant="-5" id="Dk7-Ov-gfG"/>
                             <constraint firstItem="uYc-wq-Mim" firstAttribute="leading" secondItem="Txb-OJ-EG8" secondAttribute="trailing" constant="8" id="FHe-mU-2AA"/>
                             <constraint firstItem="cMh-yf-g3B" firstAttribute="top" secondItem="nwk-EG-6Ei" secondAttribute="bottom" constant="14" id="Fii-0E-ZoZ"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ogc-DH-7hf" secondAttribute="trailing" constant="30" id="JFX-oC-LNu"/>
+                            <constraint firstItem="ogc-DH-7hf" firstAttribute="trailing" secondItem="pdM-E8-oE3" secondAttribute="trailing" constant="-119" id="JgM-Tm-rCz"/>
+                            <constraint firstItem="ogc-DH-7hf" firstAttribute="centerY" secondItem="Txb-OJ-EG8" secondAttribute="centerY" id="KSH-oj-gE2"/>
                             <constraint firstItem="jzn-Vj-LlO" firstAttribute="top" secondItem="Txb-OJ-EG8" secondAttribute="bottom" constant="10" id="LE9-Bv-Kbt"/>
                             <constraint firstItem="jzn-Vj-LlO" firstAttribute="leading" secondItem="ieL-K9-V5A" secondAttribute="leading" id="MRo-jD-df5"/>
-                            <constraint firstItem="Txb-OJ-EG8" firstAttribute="centerY" secondItem="ogc-DH-7hf" secondAttribute="centerY" id="N5H-Rm-lxt"/>
-                            <constraint firstItem="MCk-y3-ZND" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ogc-DH-7hf" secondAttribute="bottom" constant="10" id="OIS-6r-nyK"/>
-                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="ogc-DH-7hf" secondAttribute="trailing" constant="12" id="SFv-nB-NIb"/>
+                            <constraint firstAttribute="trailing" secondItem="AYz-Nx-tCy" secondAttribute="trailing" constant="12" id="ReF-ol-aij"/>
                             <constraint firstItem="Txb-OJ-EG8" firstAttribute="bottom" secondItem="MCk-y3-ZND" secondAttribute="bottom" id="Svw-Io-T6B"/>
                             <constraint firstItem="MCk-y3-ZND" firstAttribute="leading" secondItem="Txb-OJ-EG8" secondAttribute="trailing" constant="8" id="TYS-FX-yAr"/>
                             <constraint firstItem="uYc-wq-Mim" firstAttribute="top" secondItem="ieL-K9-V5A" secondAttribute="top" constant="167" id="Y1i-lF-d4K"/>
-                            <constraint firstAttribute="trailing" secondItem="pdM-E8-oE3" secondAttribute="trailing" constant="16" id="YPN-mf-1yM"/>
+                            <constraint firstItem="uYc-wq-Mim" firstAttribute="top" secondItem="cMh-yf-g3B" secondAttribute="bottom" constant="8" id="av1-Lk-tgb"/>
                             <constraint firstItem="pdM-E8-oE3" firstAttribute="top" secondItem="nwk-EG-6Ei" secondAttribute="top" constant="1" id="bAv-SG-rlI"/>
                             <constraint firstItem="uYc-wq-Mim" firstAttribute="leading" secondItem="cMh-yf-g3B" secondAttribute="leading" id="bwn-Ck-8UX"/>
                             <constraint firstItem="nwk-EG-6Ei" firstAttribute="top" secondItem="EiA-2z-Uef" secondAttribute="bottom" constant="39" id="geJ-nn-xjw"/>
-                            <constraint firstItem="AYz-Nx-tCy" firstAttribute="trailing" secondItem="pdM-E8-oE3" secondAttribute="trailing" id="h0Z-P7-1WI"/>
-                            <constraint firstItem="ogc-DH-7hf" firstAttribute="top" secondItem="uYc-wq-Mim" secondAttribute="bottom" constant="19" id="hCh-E9-MSB"/>
                             <constraint firstItem="nwk-EG-6Ei" firstAttribute="leading" secondItem="ieL-K9-V5A" secondAttribute="leading" constant="16" id="jTE-BF-PuA"/>
                             <constraint firstItem="Txb-OJ-EG8" firstAttribute="top" secondItem="AYz-Nx-tCy" secondAttribute="top" constant="-3" id="l5W-oz-khw"/>
                             <constraint firstItem="jzn-Vj-LlO" firstAttribute="top" secondItem="MCk-y3-ZND" secondAttribute="bottom" constant="10" id="pi1-Eb-B3l"/>
                             <constraint firstItem="Txb-OJ-EG8" firstAttribute="top" secondItem="cMh-yf-g3B" secondAttribute="top" id="qaT-H0-ztV"/>
+                            <constraint firstItem="ogc-DH-7hf" firstAttribute="leading" secondItem="uYc-wq-Mim" secondAttribute="leading" id="uJ1-MT-I5z"/>
+                            <constraint firstItem="pdM-E8-oE3" firstAttribute="leading" secondItem="nwk-EG-6Ei" secondAttribute="trailing" constant="32" id="vCB-Oq-5uN"/>
                             <constraint firstItem="uYc-wq-Mim" firstAttribute="top" secondItem="cMh-yf-g3B" secondAttribute="bottom" constant="8" symbolic="YES" id="wlh-kr-AGI"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="MCk-y3-ZND" secondAttribute="trailing" constant="12" id="wzk-qu-ori"/>
                             <constraint firstItem="Txb-OJ-EG8" firstAttribute="leading" secondItem="nwk-EG-6Ei" secondAttribute="leading" id="yKg-4B-oCE"/>
